# dataneuron

./: .gitignore  CONTRIBUTING.md  README.md  conftest.py  drd.json  pyproject.toml  sql_query_filter.py  test_sql_query_filter.py
src/data_neuron/: __init__.py  cli.py  config.py  context_loader.py  lambda_handler.py  llm_processor.py  query_executor.py  query_refiner.py  query_worker.py  server.py  sql_validator.py
src/data_neuron/api/: claude_api.py  main.py  openai_api.py
src/data_neuron/ask_cmd/: main.py  query_worker.py
src/data_neuron/chat_cmd/: main.py
src/data_neuron/cmd/: ask_cmd.py  chat_cmd.py  context_init_cmd.py  db_init_cmd.py  mark_clients_cmd.py  report_cmd.py
src/data_neuron/context_init_cmd/: main.py  table_operations.py  yaml_generator.py
src/data_neuron/core/: __init__.py  context_loader.py  dashboard_manager.py  data_neuron.py  query_refiner.py  sql_query_filter.py
src/data_neuron/db_init_cmd/: main.py
src/data_neuron/db_operations/: base.py  clickhouse.py  database_helpers.py  duckdb.py  error_handler.py  factory.py  mssql.py  mysql.py  postgres.py  sqlite.py
src/data_neuron/prompts/: query_refinement_prompt.py  report_generation_prompt.py  sql_query_prompt.py  yaml_generation_prompt.py
src/data_neuron/report_cmd/: main.py
src/data_neuron/utils/: date_functions.py  file_utils.py  print.py  serialization.py  stream_print.py
src/dataneuron/: __init__.py  cli.py  lambda_handler.py  server.py
src/dataneuron/api/: claude_api.py  ollama_api.py  openai_api.py
src/dataneuron/cmd/: chat_cmd.py  context_init_cmd.py  report_cmd.py
src/dataneuron/core/: context_loader.py  dashboard_manager.py  data_neuron.py  query_refiner.py  sql_query_filter.py
src/dataneuron/db_operations/: database_helpers.py  exceptions.py  mysql.py
tests/: test_cli.py  test_context_loader.py  test_llm_processor.py  test_query_executor.py
tests/ask_cmd/: test_main.py
tests/core/: test_cte_handlers.py  test_is_cte.py  test_sql_query_filter.py
tests/db_init_cmd/: test_main.py
tests/db_operations/: test_factory.py  test_mssql.py  test_mysql.py  test_postgres.py  test_sqlite.py
tests/utils/: test_stream_print.py
(+31 files in other folders)
