[tool.poetry]
name = "data-neuron"
version = "0.1.0"
description = "A CLI tool for querying databases using natural language"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "data_neuron", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
pyyaml = "^6.0"
openai = "^0.27.0"
pyaml = "^24.7.0"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dnn = "data_neuron.cli:main"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
python_files = "test_*.py"